Progress on chapter 1

--- a/Chapter 1  - The machine learning landscape.ipynb
+++ b/Chapter 1  - The machine learning landscape.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +249,43 @@
    "metadata": {},
    "source": [
     "Here we see that using two models with different approaches, we could get similar results for Cyprus Life Satisfaction value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main challenges of Machine learning models\n",
+    "***\n",
+    "Considering this topic, we can note how the two main aspects in a ML project are: the **data** and the **model**. In this sense, errors that happen with any of these two may have important impact on the outcome of the study. <br>\n",
+    "In this part I will try to list some of the errors sources that we often face when working with data science projects.\n",
+    "## Data problems\n",
+    "ML models can only be as good as the data that we feed them, in this sense especial care needs to be taken into data collection, processing and storage stages.\n",
+    "### Insuffiecient quantity of training data\n",
+    "\"More is better\". This is mostly true for ML models as well. Although models are optimized using larger amounts of data, the cost to collect and store such large data \n",
+    "### Nonrepresentative training data\n",
+    "This is especially relevant considering the need for \"global models\". Unfortunately this can even create or reinforce ethical problems such as racism and many other forms of prejudice.\n",
+    "### Poor-quality data\n",
+    "This usually happens because of issues on data collection. Misscalibrated equipments and differences in samplig processes are examples of causes. <br>\n",
+    "Problems with data quality are hard to solve, because once you have collected the data, there is no coming back. For this reason proper planning and execution of data collection is a primal step when developing projects.\n",
+    "### Irrelevant features\n",
+    "### Overfitting the training data\n",
+    "This happens when your model becomes too good (at some times perfect) at understanding (i.e. predicting) your training data but performs poorly with unseen data. This is extremely problematic and will effectively create a model that is useless in real-world scenarios. <br>\n",
+    "Ways to overcome this issue are:\n",
+    "1. Simplify the model;\n",
+    "2. Try different models and parameters;\n",
+    "3. Gather more training data;\n",
+    "4. Reduce the noise in the training data.\n",
+    "\n",
+    "### Underfitting the training data\n",
+    "Opposite of the prior category."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing and validating"
    ]
   }
  ],
