--- a/Chapter 1  - The machine learning landscape.ipynb
+++ b/Chapter 1  - The machine learning landscape.ipynb
@@ -287,6 +287,177 @@
    "source": [
     "# Testing and validating"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. How would you define Machine Learning \n",
+    "Answered above ^^"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Can you name four types of problems where it shines?\n",
+    "1. Image classification;\n",
+    "2. Text analysis;\n",
+    "3. Interpretation of complex datasets;\n",
+    "4. Anomally detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. What is a labeled dataset?\n",
+    "It is a dataset that has each data entry classified, be it by a categorical or a numeric variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. What are the two most common supervised tasks?\n",
+    "Classification and Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Can you name four common unsupervised tasks?\n",
+    "1. Dimensionality redudction;\n",
+    "2. Clustering (hierarchical or not);\n",
+    "3. Association rule learning;\n",
+    "4. Anomally detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. What type of Machine Learning algorithm would you use to allow a robot to walk in various unknown terrain?\n",
+    "Semi-supervised learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7. What type of algorithm would you use to segment your customures into multiple groups?\n",
+    "Clustering or hierarchical clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 8. Would you frame the problem of spam detection as a supervised learning problem or an unsupervised learning problem?\n",
+    "Supervised"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9. What is a online learning sytem?\n",
+    "A model that is able to be trained on the-fly. As more data is collected, the model is trained again and again"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 10. What is out-of-core learning?\n",
+    "The process of loading small chunks of your huge dataset and training and testing your model in a step-wise way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11. What type of learning algorithm relies on a similarity measure to make predictions?\n",
+    "Instance based learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 12. What is the difference between a model parameter and a learning algorithm's hyperparameter?\n",
+    "The parameter of a model is much like a variable and the \"weight\" that this variable has in the model while the hyperparameter is similar to model's configuration. Once you set the hyperparameter, this configuration will be used in all steps of learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 13. What do model-based learning algorithms search for? What is the most common strategy they use to succeed? How do they make predictions?\n",
+    "Train a model with the data available and use this data to predict new data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 14. Can you name four of the main challenges in Machine Learning?\n",
+    "1. Poor quality data;\n",
+    "2. Nonrepresentative data;\n",
+    "3. Small amount of data;\n",
+    "4. Irrelevant features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 15. If your model performs great on the training data but generalizes poorly to new instances, what is happening? Can you name three possible solutions?\n",
+    "Overfiting. \n",
+    "1. Change to more simple versions of the model;\n",
+    "2. Get more training data;\n",
+    "3. Hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 16. What is a test set and why would you want to use it?\n",
+    "The test is a smaller fragment of your dataset (usually 20%) that is witheld from the training process. This test subset is treated as new and unseen data used to evaluate the performance of the trained model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 17. What is the purpose of the validation set?\n",
+    "The validation set is often extracted from the training dataset. It is used to evaluate the performance of different versions of the model (hyperparameter tuning). After you select the best model able to better predict the validation set, you should train the model (using the selected parameters) with the combination of the training+validation data sets and perform the evaluation of the test set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 18. What can go wrong if you tune hyperparameters using the test set?\n",
+    "You might end up with a model that minimizes erros for the test set, but performs poorly with new data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 19. What is repeated cross-validation and why should you prefer it to using a single validation set?\n",
+    "It is a set of methods that iteratively trains and tests your model with different subsets of the data. This is better than using a single validation set because you avoid the effect of randomness in your result."
+   ]
   }
  ],
  "metadata": {
